moved preloaded chats and new chats into one div to prevent weird gapping. changed background color for chat message and some of the css color variable opacities. changed input field placeholder text color and made it italic.

--- a/react-app/src/components/Dashboard/ChatMessage/ChatMessage.css
+++ b/react-app/src/components/Dashboard/ChatMessage/ChatMessage.css
@@ -16,7 +16,8 @@
 .message__content {
     padding: 7px 12px;
     margin: 4px 0;
-    background-color: var(--sidebar-bg);
+    font-size: var(--body-font);
+    background-color: var(--input-bg);
     border-radius: 14px;
 }
 
